@@ -42,5 +42,7 @@ $route['default_controller'] = "welcome";
 $route['404_override'] = '';
 $route['sleep'] = 'first/zzz';
 $route['show/(:num)'] = 'first/gimme/$1';
+$route['([a-z]{4})/bingo'] = 'bingo';
+
 /* End of file routes.php */
 /* Location: ./application/config/routes.php */
