@@ -1,0 +1,34 @@
+<?php
+
+/**
+ * Our homepage. Show a table of all the author pictures. Clicking on one should show their quote.
+ * Our quotes model has been autoloaded, because we use it everywhere.
+ *
+ * controllers/Bingo.php
+ *
+ * ------------------------------------------------------------------------
+ */
+class Bingo extends Application {
+
+    function __construct()
+    {
+        parent::__construct();
+    }
+
+    //-------------------------------------------------------------
+    //  The normal pages
+    //-------------------------------------------------------------
+
+    function index()
+    {
+        $this->data['pagebody'] = 'justone';	// this is the view we want shown
+        // build the list of authors, to pass on to our view
+        $source = $this->quotes->get(5);
+        $this->data = array_merge($this->data, $source);
+        $this->render();
+    }
+
+}
+
+/* End of file Bingo.php */
+/* Location: application/controllers/Bingo.php */
