@@ -1,3 +1,4 @@
 Forked from jedi-academy/starter-quotes
 - Fixed the link for the first person (zzz)
 - Fixed the link for the third person (gimme)
+- Fixed the link for the fifth person (bingo)
